<resources>
    <string name="app_name">AESport</string>

    <!--title-->
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_search">Search</string>
    <string name="title_sports">Sports</string>
    <string name="title_leagues">Leagues</string>
    <string name="title_countries">Countries</string>
    <string name="title_player">Player</string>
    <string name="title_team">Team</string>
    <string name="title_former_team">Former Teams</string>

    <!--text-->
    <string name="text_welcome">Welcome to AESport Application</string>
    <string name="text_recommend">The place that provides you with all about the world of sports.</string>
    <string name="text_established">Established</string>
    <string name="text_sport">Sport</string>
    <string name="text_current_season">Current season</string>
    <string name="text_location">Location</string>
    <string name="text_gender">Gender</string>
    <string name="text_descriptions">Descriptions</string>
    <string name="text_teams">Teams</string>
    <string name="text_events">Last Events</string>
    <string name="text_trophy">Trophy Icon</string>
    <string name="text_nickname">Nicknames</string>
    <string name="text_stadium">Stadium/Home</string>
    <string name="text_jersey">Jersey or Equipment Clearart</string>
    <string name="text_capacity">(%s Capacity)</string>
    <string name="text_country">Country : </string>
    <string name="text_born">Date born</string>
    <string name="text_birth_place">Birthplace</string>
    <string name="text_height">Height</string>
    <string name="text_weight">Weight</string>

    <!--message-->
    <string name="msg_exception_base">Binding is only valid between onCreateView and onDestroyView</string>
    <string name="value_yes">yes</string>
    <string name="values_no">no</string>
</resources>
