<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="searchVM"
            type="com.suntraining.aesport.ui.search.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <View
            android:id="@+id/viewToolbar"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textTitle"
            style="@style/TextTitleToolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/sp_30"
            app:layout_constraintBottom_toBottomOf="@id/viewToolbar"
            app:layout_constraintEnd_toEndOf="@id/viewToolbar"
            app:layout_constraintStart_toStartOf="@id/viewToolbar"
            app:layout_constraintTop_toTopOf="@id/viewToolbar" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewToolbar"
            app:tabIndicatorColor="@color/color_gray_chateau"
            app:tabSelectedTextColor="@color/color_elephant"
            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
            app:tabTextColor="@color/color_loblolly">

            <com.google.android.material.tabs.TabItem
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_team" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_player" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPagerSearch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabSearch" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
